--- a/app.json
+++ b/app.json
@@ -17,18 +17,18 @@
     "backgroundColor": "#ffffff",
     "list": [{
       "pagePath": "pages/index/index",
-      "iconPath": "image/wechat.png",
-      "selectedIconPath": "image/wechatHL.png",
+      "iconPath": "image/home.png",
+      "selectedIconPath": "image/home-a.png",
       "text": "主页"
     }, {
       "pagePath": "pages/logs/logs",
-      "iconPath": "image/wechat.png",
-      "selectedIconPath": "image/wechatHL.png",
+      "iconPath": "image/log.png",
+      "selectedIconPath": "image/log-a.png",
       "text": "记录"
     }, {
       "pagePath": "pages/setting/setting",
-      "iconPath": "image/wechat.png",
-      "selectedIconPath": "image/wechatHL.png",
+      "iconPath": "image/setting.png",
+      "selectedIconPath": "image/setting-a.png",
       "text": "设置"
     }]
   }
