--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wxf139080711e5e5bd",
+	"appid": "wx406e46327f77188d",
 	"projectname": "time-manager",
 	"debugOptions": {
 		"hidedInDevtools": []
