--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/logs/logs",
     "pages/setting/setting"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#3197ed",
     "navigationBarTitleText": "",
     "navigationBarTextStyle": "white"
@@ -15,21 +15,26 @@
     "selectedColor": "#3cc51f",
     "borderStyle": "black",
     "backgroundColor": "#ffffff",
-    "list": [{
-      "pagePath": "pages/index/index",
-      "iconPath": "image/home.png",
-      "selectedIconPath": "image/home-a.png",
-      "text": "主页"
-    }, {
-      "pagePath": "pages/logs/logs",
-      "iconPath": "image/log.png",
-      "selectedIconPath": "image/log-a.png",
-      "text": "记录"
-    }, {
-      "pagePath": "pages/setting/setting",
-      "iconPath": "image/setting.png",
-      "selectedIconPath": "image/setting-a.png",
-      "text": "设置"
-    }]
-  }
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "image/home.png",
+        "selectedIconPath": "image/home-a.png",
+        "text": "主页"
+      },
+      {
+        "pagePath": "pages/logs/logs",
+        "iconPath": "image/log.png",
+        "selectedIconPath": "image/log-a.png",
+        "text": "记录"
+      },
+      {
+        "pagePath": "pages/setting/setting",
+        "iconPath": "image/setting.png",
+        "selectedIconPath": "image/setting-a.png",
+        "text": "设置"
+      }
+    ]
+  },
+  "sitemapLocation": "sitemap.json"
 }
