--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
         "pages/index4/index",
         "pages/index5/index"
     ],
-    "entryPagePath": "pages/index5/index",
+    "entryPagePath": "pages/index/index",
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#3197ed",
